# vgis10

./: .gitmodules  CMakeLists.txt
calibration/: intrinsics.yml  intrinsics_s30.yml
cmake/: Common.cmake
include/: CalibHessian.h  CalibrationYaml.h  CameraCalibration.h  CoarseDistanceMap.h  CoarseTracker.h  Core.h  Frame.h  FrameClass.h  FrameFramePrecalc.h  FramePose.h  FrameToFramePrecalc.h  HessianBlocks.h  ImmaturePoint.h  ImmaturePointTemporaryResidual.h  Logger.h  Point.h  PointHessian.h  PointSelection.h  ResidualProjections.h  Residuals.h  Settings.h  ThreadPool.h  Tracker.h  TrackerInitializer.h  Types.h
include/Optimized/: AccumulatedSCHessian.h  AccumulatedTopHessian.h  EFFrame.h  EFPoint.h  EFResidual.h  Energy.h  Linearize.h  MatrixAccumulators.h  PointFrameResidual.h  RawResidualJacobian.h
include/Util/: Enums.h  IndexThreadReduce.h  Linearize.h  Populate.h
src/: CameraCalibration.cpp  CoarseTracker.cpp  Core.cpp  Frame.cpp  FrameClass.cpp  HessianBlocks.cpp  ImmaturePoint.cpp  Logger.cpp  Main.cpp  PointHessian.cpp  PointSelection.cpp  Residuals.cpp  Tracker.cpp  TrackerOptimize.cpp
src/Optimized/: AccumulatedSCHessian.cpp  AccumulatedTopHessian.cpp  EFResidual.cpp  Energy.cpp  PointFrameResidual.cpp
